6998802: ScavengeALot: assert(!gch->incremental_collection_failed()) failed: Twice in a row

Weaken assert by excluding scavenges resulting from -XX:+ScavengeALot stress-testing option.

Reviewed-by: jmasa, tonyp